--- a/public/admin_backend/assets/css/app.css
+++ b/public/admin_backend/assets/css/app.css
@@ -1,18 +1,11 @@
-/*
-Template Name: Rukada Admin
-Author: codervent
-Email: codervent@gmail.com
-File: app.css
-*/
-
-@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap);
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap");
 body {
     font-size: 14px;
     color: #4c5258;
     letter-spacing: 0.5px;
     background-color: #f4f4f4;
     overflow-x: hidden;
-    font-family: Roboto, sans-serif;
+    font-family: "Quicksand", Courier, monospace;
 }
 
 a {
